src/BlasSharp.AppleAccelerate/NativeMethods.CBLAS.g.cs


        [DllImport(__DllName, EntryPoint = "cblas_ssyr2", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void cblas_ssyr2(uint __Order, uint __Uplo, int __N, float __alpha, float* __X, int __incX, float* __Y, int __incY, float* __A, int __lda);

        [DllImport(__DllName, EntryPoint = "cblas_sspr2", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void cblas_sspr2(uint __Order, uint __Uplo, int __N, float __alpha, float* __X, int __incX, float* __Y, int __incY, float* __A);

        [DllImport(__DllName, EntryPoint = "cblas_dsymv", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void cblas_dsymv(uint __Order, uint __Uplo, int __N, double __alpha, double* __A, int __lda, double* __X, int __incX, double __beta, double* __Y, int __incY);

        [DllImport(__DllName, EntryPoint = "cblas_dsbmv", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void cblas_dsbmv(uint __Order, uint __Uplo, int __N, int __K, double __alpha, double* __A, int __lda, double* __X, int __incX, double __beta, double* __Y, int __incY);

        [DllImport(__DllName, EntryPoint = "cblas_dspmv", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void cblas_dspmv(uint __Order, uint __Uplo, int __N, double __alpha, double* __Ap, double* __X, int __incX, double __beta, double* __Y, int __incY);

        [DllImport(__DllName, EntryPoint = "cblas_dger", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void cblas_dger(uint __Order, int __M, int __N, double __alpha, double* __X, int __incX, double* __Y, int __incY, double* __A, int __lda);

        [DllImport(__DllName, EntryPoint = "cblas_dsyr", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void cblas_dsyr(uint __Order, uint __Uplo, int __N, double __alpha, double* __X, int __incX, double* __A, int __lda);

        [DllImport(__DllName, EntryPoint = "cblas_dspr", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void cblas_dspr(uint __Order, uint __Uplo, int __N, double __alpha, double* __X, int __incX, double* __Ap);

        [DllImport(__DllName, EntryPoint = "cblas_dsyr2", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void cblas_dsyr2(uint __Order, uint __Uplo, int __N, double __alpha, double* __X, int __incX, double* __Y, int __incY, double* __A, int __lda);

        [DllImport(__DllName, EntryPoint = "cblas_dspr2", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void cblas_dspr2(uint __Order, uint __Uplo, int __N, double __alpha, double* __X, int __incX, double* __Y, int __incY, double* __A);

        [DllImport(__DllName, EntryPoint = "cblas_chemv", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void cblas_chemv(uint __Order, uint __Uplo, int __N, void* __alpha, void* __A, int __lda, void* __X, int __incX, void* __beta, void* __Y, int __incY);

        [DllImport(__DllName, EntryPoint = "cblas_chbmv", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void cblas_chbmv(uint __Order, uint __Uplo, int __N, int __K, void* __alpha, void* __A, int __lda, void* __X, int __incX, void* __beta, void* __Y, int __incY);

        [DllImport(__DllName, EntryPoint = "cblas_chpmv", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void cblas_chpmv(uint __Order, uint __Uplo, int __N, void* __alpha, void* __Ap, void* __X, int __incX, void* __beta, void* __Y, int __incY);

        [DllImport(__DllName, EntryPoint = "cblas_cgeru", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void cblas_cgeru(uint __Order, int __M, int __N, void* __alpha, void* __X, int __incX, void* __Y, int __incY, void* __A, int __lda);

        [DllImport(__DllName, EntryPoint = "cblas_cgerc", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void cblas_cgerc(uint __Order, int __M, int __N, void* __alpha, void* __X, int __incX, void* __Y, int __incY, void* __A, int __lda);

        [DllImport(__DllName, EntryPoint = "cblas_cher", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void cblas_cher(uint __Order, uint __Uplo, int __N, float __alpha, void* __X, int __incX, void* __A, int __lda);

        [DllImport(__DllName, EntryPoint = "cblas_chpr", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void cblas_chpr(uint __Order, uint __Uplo, int __N, float __alpha, void* __X, int __incX, void* __A);

        [DllImport(__DllName, EntryPoint = "cblas_cher2", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void cblas_cher2(uint __Order, uint __Uplo, int __N, void* __alpha, void* __X, int __incX, void* __Y, int __incY, void* __A, int __lda);

        [DllImport(__DllName, EntryPoint = "cblas_chpr2", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void cblas_chpr2(uint __Order, uint __Uplo, int __N, void* __alpha, void* __X, int __incX, void* __Y, int __incY, void* __Ap);

        [DllImport(__DllName, EntryPoint = "cblas_zhemv", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void cblas_zhemv(uint __Order, uint __Uplo, int __N, void* __alpha, void* __A, int __lda, void* __X, int __incX, void* __beta, void* __Y, int __incY);

        [DllImport(__DllName, EntryPoint = "cblas_zhbmv", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void cblas_zhbmv(uint __Order, uint __Uplo, int __N, int __K, void* __alpha, void* __A, int __lda, void* __X, int __incX, void* __beta, void* __Y, int __incY);

        [DllImport(__DllName, EntryPoint = "cblas_zhpmv", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void cblas_zhpmv(uint __Order, uint __Uplo, int __N, void* __alpha, void* __Ap, void* __X, int __incX, void* __beta, void* __Y, int __incY);

        [DllImport(__DllName, EntryPoint = "cblas_zgeru", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void cblas_zgeru(uint __Order, int __M, int __N, void* __alpha, void* __X, int __incX, void* __Y, int __incY, void* __A, int __lda);

        [DllImport(__DllName, EntryPoint = "cblas_zgerc", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void cblas_zgerc(uint __Order, int __M, int __N, void* __alpha, void* __X, int __incX, void* __Y, int __incY, void* __A, int __lda);

        [DllImport(__DllName, EntryPoint = "cblas_zher", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void cblas_zher(uint __Order, uint __Uplo, int __N, double __alpha, void* __X, int __incX, void* __A, int __lda);

        [DllImport(__DllName, EntryPoint = "cblas_zhpr", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void cblas_zhpr(uint __Order, uint __Uplo, int __N, double __alpha, void* __X, int __incX, void* __A);

        [DllImport(__DllName, EntryPoint = "cblas_zher2", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void cblas_zher2(uint __Order, uint __Uplo, int __N, void* __alpha, void* __X, int __incX, void* __Y, int __incY, void* __A, int __lda);

        [DllImport(__DllName, EntryPoint = "cblas_zhpr2", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void cblas_zhpr2(uint __Order, uint __Uplo, int __N, void* __alpha, void* __X, int __incX, void* __Y, int __incY, void* __Ap);

        [DllImport(__DllName, EntryPoint = "cblas_sgemm", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void cblas_sgemm(uint __Order, uint __TransA, uint __TransB, int __M, int __N, int __K, float __alpha, float* __A, int __lda, float* __B, int __ldb, float __beta, float* __C, int __ldc);

        [DllImport(__DllName, EntryPoint = "cblas_ssymm", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void cblas_ssymm(uint __Order, uint __Side, uint __Uplo, int __M, int __N, float __alpha, float* __A, int __lda, float* __B, int __ldb, float __beta, float* __C, int __ldc);

        [DllImport(__DllName, EntryPoint = "cblas_ssyrk", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void cblas_ssyrk(uint __Order, uint __Uplo, uint __Trans, int __N, int __K, float __alpha, float* __A, int __lda, float __beta, float* __C, int __ldc);

        [DllImport(__DllName, EntryPoint = "cblas_ssyr2k", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void cblas_ssyr2k(uint __Order, uint __Uplo, uint __Trans, int __N, int __K, float __alpha, float* __A, int __lda, float* __B, int __ldb, float __beta, float* __C, int __ldc);

        [DllImport(__DllName, EntryPoint = "cblas_strmm", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void cblas_strmm(uint __Order, uint __Side, uint __Uplo, uint __TransA, uint __Diag, int __M, int __N, float __alpha, float* __A, int __lda, float* __B, int __ldb);

        [DllImport(__DllName, EntryPoint = "cblas_strsm", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void cblas_strsm(uint __Order, uint __Side, uint __Uplo, uint __TransA, uint __Diag, int __M, int __N, float __alpha, float* __A, int __lda, float* __B, int __ldb);

        [DllImport(__DllName, EntryPoint = "cblas_dgemm", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void cblas_dgemm(uint __Order, uint __TransA, uint __TransB, int __M, int __N, int __K, double __alpha, double* __A, int __lda, double* __B, int __ldb, double __beta, double* __C, int __ldc);

        [DllImport(__DllName, EntryPoint = "cblas_dsymm", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void cblas_dsymm(uint __Order, uint __Side, uint __Uplo, int __M, int __N, double __alpha, double* __A, int __lda, double* __B, int __ldb, double __beta, double* __C, int __ldc);

        [DllImport(__DllName, EntryPoint = "cblas_dsyrk", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void cblas_dsyrk(uint __Order, uint __Uplo, uint __Trans, int __N, int __K, double __alpha, double* __A, int __lda, double __beta, double* __C, int __ldc);

        [DllImport(__DllName, EntryPoint = "cblas_dsyr2k", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void cblas_dsyr2k(uint __Order, uint __Uplo, uint __Trans, int __N, int __K, double __alpha, double* __A, int __lda, double* __B, int __ldb, double __beta, double* __C, int __ldc);

        [DllImport(__DllName, EntryPoint = "cblas_dtrmm", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void cblas_dtrmm(uint __Order, uint __Side, uint __Uplo, uint __TransA, uint __Diag, int __M, int __N, double __alpha, double* __A, int __lda, double* __B, int __ldb);
